// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User List: Component should render correctly with loader 1`] = `
<styled.div>
  <MobileMenu
    active="userNavBtn"
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Overview"
        id="userList.headerSubtitle"
      />
    }
    headerTitle={
      <FormattedMessage
        defaultMessage="Users"
        id="userList.headerTitle"
      />
    }
    options={
      Array [
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "projectsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Projects"
            id="user.projectsListPage"
          />,
          "to": "/project/",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "userNavBtn",
          "label": <FormattedMessage
            defaultMessage="Users"
            id="user.userPage"
          />,
          "to": "/user/",
          "type": "link_item",
        },
      ]
    }
  />
  <ContextHeader
    subtitle={
      <FormattedMessage
        defaultMessage="Overview"
        id="userList.headerSubtitle"
      />
    }
    title={
      <FormattedMessage
        defaultMessage="Users"
        id="userList.headerTitle"
      />
    }
  >
    <PlusLink
      id="addUserBtn"
      size={60}
      to="/user/add"
    />
  </ContextHeader>
  <LoadingWrapper
    error={null}
    loading={true}
    noData={true}
    noDataContent={null}
  >
    <UserList
      users={Array []}
    />
  </LoadingWrapper>
  <NavigationContainer
    contentStyles={null}
    fixed={true}
    hideOnDesktop={false}
    right={false}
  >
    <BackLink
      to="/"
    >
      <FormattedMessage
        defaultMessage="Back"
        id="userList.back"
      />
    </BackLink>
    <PlusLink
      hideOnDesktop={true}
      id="addUserBtn"
      size={60}
      to="/user/add"
    />
  </NavigationContainer>
</styled.div>
`;

exports[`User List: Component should render correctly with users data 1`] = `
<styled.div>
  <MobileMenu
    active="userNavBtn"
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Overview"
        id="userList.headerSubtitle"
      />
    }
    headerTitle={
      <FormattedMessage
        defaultMessage="Users"
        id="userList.headerTitle"
      />
    }
    options={
      Array [
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "projectsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Projects"
            id="user.projectsListPage"
          />,
          "to": "/project/",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "userNavBtn",
          "label": <FormattedMessage
            defaultMessage="Users"
            id="user.userPage"
          />,
          "to": "/user/",
          "type": "link_item",
        },
      ]
    }
  />
  <ContextHeader
    subtitle={
      <FormattedMessage
        defaultMessage="Overview"
        id="userList.headerSubtitle"
      />
    }
    title={
      <FormattedMessage
        defaultMessage="Users"
        id="userList.headerTitle"
      />
    }
  >
    <PlusLink
      id="addUserBtn"
      size={60}
      to="/user/add"
    />
  </ContextHeader>
  <LoadingWrapper
    error={null}
    loading={false}
    noData={false}
    noDataContent={null}
  >
    <UserList
      users={
        Array [
          Object {
            "firstName": "John",
            "lastName": "Doe",
          },
          Object {
            "firstName": "Alan",
            "lastName": "Watts",
          },
        ]
      }
    />
  </LoadingWrapper>
  <NavigationContainer
    contentStyles={null}
    fixed={true}
    hideOnDesktop={false}
    right={false}
  >
    <BackLink
      to="/"
    >
      <FormattedMessage
        defaultMessage="Back"
        id="userList.back"
      />
    </BackLink>
    <PlusLink
      hideOnDesktop={true}
      id="addUserBtn"
      size={60}
      to="/user/add"
    />
  </NavigationContainer>
</styled.div>
`;
